back/kube/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: footprints
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      volumes:
      - name: notebooks
        persistentVolumeClaim:
          claimName: block-pvc
      containers:
      - image: docker.pkg.github.com/ngkcl/space-apps-2019/app:{tag}
        name: app
        ports:
        - containerPort: 80
        - containerPort: 8888
        volumeMounts:
        - name: notebooks
          mountPath: /app/notebooks
      imagePullSecrets:
      - name: regcred
