back/kube/ingress-nginx.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx"},"name":"ingress-nginx","namespace":"ingress-nginx"},"spec":{"externalTrafficPolicy":"Local","ports":[{"name":"http","port":80,"targetPort":"http"},{"name":"https","port":443,"targetPort":"https"}],"selector":{"app.kubernetes.io/name":"ingress-nginx","app.kubernetes.io/part-of":"ingress-nginx"},"type":"LoadBalancer"}}
      kubernetes.digitalocean.com/load-balancer-id: 61858ecd-9e9c-4114-acc2-00ee6e13a3cd
    creationTimestamp: "2019-10-23T19:11:12Z"
    labels:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
    name: ingress-nginx
    namespace: ingress-nginx
    resourceVersion: "62832"
    selfLink: /api/v1/namespaces/ingress-nginx/services/ingress-nginx
  spec:
    # clusterIP: 10.245.24.234
    externalTrafficPolicy: Local
    healthCheckNodePort: 32366
    ports:
    - name: http
      nodePort: 30702
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      nodePort: 32736
      port: 443
      protocol: TCP
      targetPort: https
    selector:
      app.kubernetes.io/name: ingress-nginx
      app.kubernetes.io/part-of: ingress-nginx
    sessionAffinity: None
    type: LoadBalancer
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
