back/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: footprints
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
    - protocol: TCP
      name: notebook
      port: 8888
      targetPort: 8888
